tests/ui/macros/macro_undefined.stderr
error: cannot find macro `k` in this scope
  --> $DIR/macro_undefined.rs:11:5
   |
LL |     macro_rules! kl {
   |     --------------- similarly named macro `kl` defined here
...
LL |     k!();
   |     ^
   |     |
   |     not found in this scope
   |     help: a macro with a similar name exists: `kl`

error: aborting due to 1 previous error

